[package]
name = "rust"
version = "0.1.0"
authors = ["cbreeden <github@u.breeden.cc>"]

[dependencies]
regex = "*"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "unicode-math"
path = "tools/unicode-math.rs"

[[bin]]
name = "unicode-math-codepoints"
path = "tools/unicode-math-codepoints.rs"